--- a/xen/TODO
+++ b/xen/TODO
@@ -44,7 +44,15 @@ order to requests, just as we already do with block-device
 rings. We'll need to add an opaque identifier to ring entries,
 allowing matching of requests and responses, but that's about it.
 
-4. GDT AND LDT VIRTUALISATION 
+4. NETWORK CHECKSUM OFFLOAD 
+--------------------------- 
+All the NICs that we support can checksum packets on behalf of guest
+OSes. We need to add appropriate flags to and from each domain to
+indicate, on transmit, which packets need the checksum added and, on
+receive, which packets have been checked out as okay. We can steal
+Linux's interface, which is entirely sane given NIC limitations.
+
+5. GDT AND LDT VIRTUALISATION 
 ----------------------------- 
 We do not allow modification of the GDT, or any use of the LDT. This
 is necessary for support of unmodified applications (eg. Linux uses
@@ -55,14 +63,14 @@ I have some text on how to do this:
 /usr/groups/xeno/discussion-docs/memory_management/segment_tables.txt
 It's already half implemented, but the rest is still to do.
 
-5. DOMAIN 0 MANAGEMENT DAEMON
+6. DOMAIN 0 MANAGEMENT DAEMON
 -----------------------------
 A better control daemon is required for domain 0, which keeps proper
 track of machine resources and can make sensible policy choices. This
 may require support in Xen; for example, notifications (eg. DOMn is
 killed), and requests (eg. can DOMn allocate x frames of memory?).
 
-6. ACCURATE TIMERS AND WALL-CLOCK TIME
+7. ACCURATE TIMERS AND WALL-CLOCK TIME
 --------------------------------------
 Currently our long-term timebase free runs on CPU0, with no external
 calibration. We should run ntpd on domain 0 and allow this to warp
@@ -70,7 +78,7 @@ Xen's timebase. Once this is done, we can have a timebase per CPU and
 not worry about relative drift (since they'll all get sync'ed
 periodically by ntp).
 
-7. NEW DESIGN FEATURES
+8. NEW DESIGN FEATURES
 ----------------------
 This includes the last-chance page cache, and the unified buffer cache.
 
